# solar-inference

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  readme.md
src/: main.rs
src/api/: mod.rs
src/handlers/: mod.rs
src/model/: inference.rs  mod.rs
src/types/: mod.rs
