[package]
name = "solar-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
chrono = "0.4.39"
reqwest = {version ="0.12.9",features= ["json"]}
serde = "1.0.216"
serde_json = "1.0.133"
tch = {version = "0.18.1",default-features = false}
tokio = {version = "1.42.0" ,features =["full"]}
